--- a/SpriteEditor.csproj
+++ b/SpriteEditor.csproj
@@ -75,6 +75,12 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Frame.cs" />
+    <Compile Include="frmAddFrames.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAddFrames.Designer.cs">
+      <DependentUpon>frmAddFrames.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmGridSize.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -96,6 +102,9 @@
     <Compile Include="SpriteData.cs" />
     <Compile Include="SpriteLogic.cs" />
     <Compile Include="Utilities.cs" />
+    <EmbeddedResource Include="frmAddFrames.resx">
+      <DependentUpon>frmAddFrames.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmGridSize.resx">
       <DependentUpon>frmGridSize.cs</DependentUpon>
       <SubType>Designer</SubType>
