--- a/SpriteEditor.csproj
+++ b/SpriteEditor.csproj
@@ -102,6 +102,7 @@
     <Compile Include="SpriteData.cs" />
     <Compile Include="SpriteLogic.cs" />
     <Compile Include="Utilities.cs" />
+    <Compile Include="Vec2.cs" />
     <EmbeddedResource Include="frmAddFrames.resx">
       <DependentUpon>frmAddFrames.cs</DependentUpon>
     </EmbeddedResource>
