Magnification and Recent Files
- Allow zooming in and out using the keyboard or the main menu.
- Save recently opened files as a setting and show them in the main menu.
- Properly scale grid/bounding box/source rect with DPI and magnification.
- Only show 8 recent files, removing any duplicates.

--- a/app.config
+++ b/app.config
@@ -28,6 +28,14 @@
             <setting name="DisplayMode" serializeAs="String">
                 <value>full</value>
             </setting>
+            <setting name="RecentFiles" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                        <string />
+                    </ArrayOfString>
+                </value>
+            </setting>
         </SpriteEditor.Properties.Settings>
     </userSettings>
 </configuration>
