Remember Zoom Level Setting

--- a/app.config
+++ b/app.config
@@ -30,10 +30,14 @@
             </setting>
             <setting name="RecentFiles" serializeAs="Xml">
                 <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-                        <string/>
+                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                        <string />
                     </ArrayOfString>
                 </value>
+            </setting>
+            <setting name="ZoomLevel" serializeAs="String">
+                <value>1</value>
             </setting>
         </SpriteEditor.Properties.Settings>
     </userSettings>
