--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -32,5 +32,8 @@
     <Setting Name="ZoomLevel" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
+    <Setting Name="AutoReloadImages" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
