--- a/app.config
+++ b/app.config
@@ -39,6 +39,9 @@
             <setting name="ZoomLevel" serializeAs="String">
                 <value>1</value>
             </setting>
+            <setting name="AutoReloadImages" serializeAs="String">
+                <value>False</value>
+            </setting>
         </SpriteEditor.Properties.Settings>
     </userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/></startup></configuration>
