Allow Adding New Frames By Clicking on Grid Cells

--- a/app.config
+++ b/app.config
@@ -42,6 +42,9 @@
             <setting name="AutoReloadImages" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="UseGridSelection" serializeAs="String">
+                <value>False</value>
+            </setting>
         </SpriteEditor.Properties.Settings>
     </userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/></startup></configuration>
