Adding Multiple Directional Poses
- Extend the add frame dialog to allow adding 4-directional poses.
- Support custom direction layouts and number of frames.

--- a/SpriteEditor.csproj
+++ b/SpriteEditor.csproj
@@ -105,6 +105,7 @@
     <Compile Include="SpriteData.cs" />
     <Compile Include="SpriteLogic.cs" />
     <Compile Include="Utilities.cs" />
+    <Compile Include="IntVec2.cs" />
     <Compile Include="Vec2.cs" />
     <EmbeddedResource Include="frmAddFrames.resx">
       <DependentUpon>frmAddFrames.cs</DependentUpon>
