--- a/app.config
+++ b/app.config
@@ -45,6 +45,9 @@
             <setting name="UseGridSelection" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="UseTransparentColor" serializeAs="String">
+                <value>True</value>
+            </setting>
         </SpriteEditor.Properties.Settings>
     </userSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup></configuration>
