FMOD Sound Playback
- Use the FmodAudio wrapper to play sounds instead of the System.Media player.
- Set the specified pitch and volume when playing sound effects.
- Add a configuration to enable/disable sound playback.

--- a/SpriteEditor.csproj
+++ b/SpriteEditor.csproj
@@ -60,6 +60,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="FmodAudio" Version="2.2.2" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Microsoft.Windows.Compatibility" Version="5.0.2" />
   </ItemGroup>
