--- a/app.config
+++ b/app.config
@@ -48,6 +48,9 @@
             <setting name="UseTransparentColor" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="SoundPlayback" serializeAs="String">
+                <value>True</value>
+            </setting>
         </SpriteEditor.Properties.Settings>
     </userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup></configuration>
