--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -41,5 +41,8 @@
     <Setting Name="UseTransparentColor" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="SoundPlayback" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
