--- a/app.config
+++ b/app.config
@@ -20,27 +20,19 @@
                 <value>False</value>
             </setting>
             <setting name="ShowSrcRect" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="ShowBoundingBox" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="DisplayMode" serializeAs="String">
-                <value>full</value>
-            </setting>
-            <setting name="RecentFiles" serializeAs="Xml">
-                <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-                        <string />
-                    </ArrayOfString>
-                </value>
+                <value>animated</value>
             </setting>
             <setting name="ZoomLevel" serializeAs="String">
-                <value>1</value>
+                <value>2</value>
             </setting>
             <setting name="AutoReloadImages" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="UseGridSelection" serializeAs="String">
                 <value>False</value>
@@ -50,6 +42,13 @@
             </setting>
             <setting name="SoundPlayback" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="RecentFiles" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+                        <string />
+                    </ArrayOfString>
+                </value>
             </setting>
         </SpriteEditor.Properties.Settings>
     </userSettings>
