Smaller Sprite Files
- Update the solution to .NET 9.
- Save source rectangle properties as Frame element attributes.
- Store the pose name, state and direction as attributes instead of tags.
- Maintain compatibility with the older format.

--- a/SpriteEditor.csproj
+++ b/SpriteEditor.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net9.0-windows7.0</TargetFramework>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <OutputType>WinExe</OutputType>
     <IsWebBootstrapper>false</IsWebBootstrapper>
@@ -61,7 +61,7 @@
   <ItemGroup>
     <PackageReference Include="FmodAudio" Version="2.2.2" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageReference Include="Microsoft.Windows.Compatibility" Version="5.0.2" />
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="9.0.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="Properties\Settings.settings">
